--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,10 +42,10 @@ services:
     environment:
       - MONGO_URI=mongodb://mongodb:27017/
     ports:
-      - "5000:5000"
+      - "4001:4001"
     volumes:
       - .:/app
-    command: ["flask", "--app", "api.app", "run", "--debug", "--host=0.0.0.0"]
+    command: ["flask", "--app", "api.app", "run", "--debug", "--host=0.0.0.0","--port=4001"]
     networks:
       - app_network
 
